icon and color change commit

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script>
     if (/mobile/i.test(navigator.userAgent)) document.documentElement.className += ' w-mobile';
   </script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="pageicon.png">
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script><![endif]-->
 </head>
 <body>
@@ -132,7 +132,7 @@
             <h1 class="our-process-heading">RESUME</h1>
             <div class="sepreater"></div>
             
-            <h2 style="color:white;">To download click here: <<a style="color:blue;" href="https://drive.google.com/file/d/0BwiXwWQJLQkMR1l2N2M3VTlIaDA/view?usp=sharing"><img src=""></h2>
+            <h2 style="color:white;">To download click here: <a style="color:blue;" href="https://drive.google.com/file/d/0BwiXwWQJLQkMR1l2N2M3VTlIaDA/view?usp=sharing"><img src="images/pdcicon.png"></h2>
 
             <div class="sepreater"></div>
           </div>
@@ -222,14 +222,14 @@ Engineering II.</p>
       <div class="w-container">
         <div class="wrap">
           <div class="portfolio">
-            <h1 class="portfolio-heading">Projects</h1>
-            <div class="portfolio-text">WHAT I'VE DONE</div>
+            <h1 class="portfolio-heading" style="color:black;">Projects</h1>
+            <div class="portfolio-text" style="color:black;"><b>WHAT I'VE DONE</b></div>
             <div class="sepreater"></div>
           </div>
           <ul>
-            <h2 style="color:white;text-align: center;">Android Mobile Application</h2>
-            <li style="color:white;">Interactive game based on user reaction time, based off the Google chillie game, user has five tries to defeat opponent by waiting until the power bar is harged up and tapping the screen to "fire" at the opponent. The more power the higher the damage, opponent difficulty goes up the more enemies you defeat.</li>
-            <li style="color:white;">Native Android application, focused on user touch</li>
+            <h2 style="color:black;text-align: center;"><b>Android Mobile Application</b></h2>
+            <li style="color:black;"><b>Interactive game based on user reaction time, based off the Google chillie game, user has five tries to defeat opponent by waiting until the power bar is harged up and tapping the screen to "fire" at the opponent. The more power the higher the damage, opponent difficulty goes up the more enemies you defeat.</b></li>
+            <li style="color:black;"><b>Native Android application, focused on user touch</b></li>
           </ul>
       <div class="container demo-1">
         <ul class="grid cs-style-1">
@@ -247,9 +247,9 @@ Engineering II.</p>
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Knodemy Web Application Development.</h2>
-            <li style="color:white;">Application that allows customers to create & manage coding workshops. First iteration of the new knodemy webtool that allowed users to host and manage their own events/hackathons.</li>
-            <li style="color:white;">Python, Django, HTML5, Bootstrap, SQL</li>
+            <h2 style="color:black;text-align: center;"><b>Knodemy Web Application Development.</b></h2>
+            <li style="color:black;"><b>Application that allows customers to create & manage coding workshops. First iteration of the new knodemy webtool that allowed users to host and manage their own events/hackathons.</b></li>
+            <li style="color:black;"><b>Python, Django, HTML5, Bootstrap, SQL</b></li>
           </ul>
       <div class="container demo-1">
         <ul class="grid cs-style-1">
@@ -267,10 +267,10 @@ Engineering II.</p>
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Alexa Skills Project</h2>
-            <li style="color:white;">Basic voice command program, created using AWS, Alexa Skills Kit and Node JS. Application is a strightforward random facts application. Alexa waits until prompted and when prompted provides a random video game
-fact from a set array of facts, leveraged AWS Lambda function for server side processing</li>
-            <li style="color:white;">Alexa Skills Kit, AWS Lambda, Node JS</li>
+            <h2 style="color:black;text-align: center;"><b>Alexa Skills Project</b></h2>
+            <li style="color:black;"><b>Basic voice command program, created using AWS, Alexa Skills Kit and Node JS. Application is a strightforward random facts application. Alexa waits until prompted and when prompted provides a random video game
+fact from a set array of facts, leveraged AWS Lambda function for server side processing</b></li>
+            <li style="color:black;"><b>Alexa Skills Kit, AWS Lambda, Node JS</b></li>
             <li><a href="https://www.amazon.com/Student-Unknown-Game-Facts/dp/B07527GYQS/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1505084050&sr=1-1&keywords=student+game+facts" style="color:blue;">Click me to take a look!</a></li>
           </ul>
  <div class="container demo-1">
@@ -289,9 +289,9 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Twitter Search – Web Application</h2>
-            <li style="color:white;">Custom hashtag-based search UI for Twitter. Senior Project, helped design a twitter hashtag search where user will input a popular hash tag and will recieve the top 100 tweets based on that hashtag. The tweets are parsed and logged where the user will see another list of most popular words included within those 100 tweets. User can filter out common words if they so choose.</li>
-            <li style="color:white;">Client-side Javascript, OAuth, REST</li>
+            <h2 style="color:black;text-align: center;"><b>Twitter Search – Web Application</b></h2>
+            <li style="color:black;"><b>Custom hashtag-based search UI for Twitter. Senior Project, helped design a twitter hashtag search where user will input a popular hash tag and will recieve the top 100 tweets based on that hashtag. The tweets are parsed and logged where the user will see another list of most popular words included within those 100 tweets. User can filter out common words if they so choose.</b></li>
+            <li style="color:black;"><b>Client-side Javascript, OAuth, REST</b></li>
           </ul>
       <div class="container demo-1">
         <ul class="grid cs-style-1">
@@ -309,9 +309,9 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Interactive Game Project</h2>
-            <li style="color:white;">First-person game, objective is to roam around the world and collect three pieces of paper. After collecting the pieced of paper the user reaches a win screen where they are allowed to see the pieces of paper. The win screen takes the user to a final screen where they are allowed to scroll through the pages which happen to be my resume.</li>
-            <li style="color:white;">Developed with C# script using the Unity Engine</li>
+            <h2 style="color:black;text-align: center;"><b>Interactive Game Project</b></h2>
+            <li style="color:black;"><b>First-person game, objective is to roam around the world and collect three pieces of paper. After collecting the pieced of paper the user reaches a win screen where they are allowed to see the pieces of paper. The win screen takes the user to a final screen where they are allowed to scroll through the pages which happen to be my resume.</b></li>
+            <li style="color:black;"><b>Developed with C# script using the Unity Engine</b></li>
             <li><a href="http://bit.ly/rmahal-resumegame" style="color:blue;">Click me to take a look!</a></li>
           </ul>
       <div class="container demo-1">
@@ -330,9 +330,9 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Personal Website</h2>
-            <li style="color:white;">A personal webpage to allow users to easily connect with me and find my resume as well as other contact information.</li>
-            <li style="color:white;">HTML5, CSS, Parallax, Javascript</li>
+            <h2 style="color:black;text-align: center;"><b>Personal Website</b></h2>
+            <li style="color:black;"><b>A personal webpage to allow users to easily connect with me and find my resume as well as other contact information.</b></li>
+            <li style="color:black;"><b>HTML5, CSS, Parallax, Javascript</b></li>
           </ul>
       <div class="container demo-1">
         <ul class="grid cs-style-1">
@@ -350,9 +350,9 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
       </div>
       <div class="sepreater"></div>
           <ul>
-            <h2 style="color:white;text-align: center;">Twitch Giveaway Program</h2>
-            <li style="color:white;">Python application ran in command line that leverages a webpage that stores all users on a twitch channel in a JSON format. The program grabs the JSON object and parses the viewers into anarray the program then shuffles the array and generates a random number and uses it to pick the winner.</li>
-            <li style="color:white;">Python, Web, JSON</li>
+            <h2 style="color:black;text-align: center;"><b>Twitch Giveaway Program</b></h2>
+            <li style="color:black;"><b>Python application ran in command line that leverages a webpage that stores all users on a twitch channel in a JSON format. The program grabs the JSON object and parses the viewers into anarray the program then shuffles the array and generates a random number and uses it to pick the winner.</b></li>
+            <li style="color:black;"><b>Python, Web, JSON</b></li>
           </ul>
       <div class="container demo-1">
         <ul class="grid cs-style-1">
@@ -418,7 +418,7 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
           <div class="w-col w-col-4 contact-col1">
             <div>
                       <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a">
-                       <a href="#set-5" class="hi-icon hi-icon-earth">Partners</a>
+                       <a href="#set-5" class="hi-icon hi-icon-earth">Location</a>
                     </div>
               <h4 class="contact-col-head">Location</h4>
             </div>
@@ -430,19 +430,19 @@ fact from a set array of facts, leveraged AWS Lambda function for server side pr
           <div class="w-col w-col-4 contact-col2">
             <div>
                <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a">
-                       <a href="#set-5" class="hi-icon hi-icon-mail">Partners</a>
+                       <a href="mailto:rmahal25@gmail.com" class="hi-icon hi-icon-mail">Email</a>
                     </div>
               <h4 class="contact-col-head">Email</h4>
             </div>
             <div>
-              <div class="contact-col-text">Email: rmahal25@gmail.com
+              <div class="contact-col-text">Email: <a href="mailto:rmahal25@gmail.com" style="color:blue;" target="_top">rmahal25@gmail.com</a>
                 </div>
             </div>
           </div>
           <div class="w-col w-col-4 contact-col3">
             <div>
               <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a">
-                       <a href="#set-5" class="hi-icon hi-icon-mobile">Partners</a>
+                       <a href="#set-5" class="hi-icon hi-icon-mobile">Phone</a>
                     </div>
               <h4 class="contact-col-head">Call</h4>
             </div>
